# coretilus

./: .editorconfig  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md  build.sh  coretilus.tape  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml  update-homebrew.yml
.zed/: settings.json
src/: animation.rs  collision.rs  command.rs  coord.rs  coretilus.rs  engine.rs  frame.rs  sprite.rs  tools.rs  trajectory.rs  windows_timer.rs
src/commands/: mod.rs
src/commands/dog/: cli.rs  cli_v2.rs  dog.tape  mod.rs  objects.rs  sprite.rs
src/commands/dog/frames/: dog1.adoc  dog2.adoc  dog3.adoc  dog4.adoc  dog5.adoc  dog6.adoc
src/commands/ehco/: cli_v2.rs  ehco.tape  objects.rs
src/commands/ehco/frames/: parrot_1.adoc  parrot_2.adoc  parrot_3.adoc
src/commands/gb/: cli.rs  cli_v2.rs  gb.tape  objects.rs  sprite.rs
src/commands/gb/frames/: bg.adoc  gameboy.adoc  gb.adoc  shape_1.adoc  shape_1_1.adoc  shape_1_2.adoc  shape_2.adoc  shape_2_1.adoc  shape_2_2.adoc  shape_3.adoc  shape_3_1.adoc  shape_3_2.adoc  shape_4.adoc  shape_4_1.adoc  shape_5.adoc  shape_5_1.adoc  shape_6.adoc  shape_7.adoc  shape_7_1.adoc  shape_7_2.adoc  shape_8_1.adoc  shape_8_2.adoc
src/commands/gti/: cli.rs  cli_v2.rs  gti.tape  mod.rs  objects.rs  sprite.rs
src/commands/gti/frames/: commit1.adoc  commit2.adoc  commit3.adoc  pull1.adoc  pull2.adoc  push1.adoc  push2.adoc  std1.adoc  std2.adoc  tag1.adoc  tag2.adoc
src/commands/mr/: cli.rs  cli_v2.rs  mod.rs  mr.tape  objects.rs  sprite.rs
src/commands/mr/frames/: explosion1.adoc  explosion10.adoc  explosion2.adoc  explosion3.adoc  (+17 more)
src/commands/pc/: cli.rs  cli_v2.rs  objects.rs  pc.tape  sprite.rs
src/commands/sl/: cli.rs  cli_v2.rs  objects.rs  sl.tape  sprite.rs
src/engine_v2/: collision.rs  coords.rs  engine.rs  mod.rs  position.rs  scene.rs  size.rs
src/engine_v2/entity/: frame.rs  movement.rs  object.rs  sprite.rs  sprite_animation.rs
src/engine_v2/object/: frame.rs  mod.rs  movement.rs  object.rs  sprite.rs  sprite_animation.rs
(+50 files in other folders)
