[package]
name = "coretilus"
version = "0.1.0"
license = "Apache-2.0"
edition = "2024"
authors = ["Thibault Cohen <dev@ttb.lt>"]
repository = "https://gitlab.com/ttblt-oss/coretilus/coretilus"


[dependencies]
terminal_size = "0.4.3"
crossterm = "0.27"
rand = "0.9.2"

[dependencies.uuid]
version = "1.18.1"
# Lets you generate random UUIDs
features = [
    "v4",
]

[profile.release]
opt-level = 3          # optimisation maximale
lto = true             # link-time optimization
panic = "abort"        # plus petit et plus rapide
strip = true           # enlève les symboles pour réduire la taille
codegen-units = 1      # pour meilleures optimisations

[dev-dependencies]
cargo-llvm-cov = "0.6.21"

[lib]
name = "coretilus"
path = "src/coretilus.rs"

[[bin]]
name = "gti"

[[bin]]
name = "mr"

[[bin]]
name = "sl"
#
#[[bin]]
#name = "vm"
#
#[[bin]]
#name = "grpe"
