[package]
name = "coretilus"
version = "0.0.2"
edition = "2024"
authors = ["Thibault Cohen <dev@ttb.lt>"]
license = "Apache-2.0"
description = "A parody of GNU Coreutils — a playful collection of typo-triggered command-line tools written in Rust"
repository = "https://github.com/titilambert/coretilus"
homepage = "https://github.com/titilambert/coretilus"
documentation = "https://docs.rs/coretilus"
readme = "README.md"
keywords = ["cli", "terminal", "typo", "fun", "humor"]
categories = ["command-line-interface", "games"]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/sl", dest = "/usr/bin/sl", mode = "755" },
    { source = "target/release/gti", dest = "/usr/bin/gti", mode = "755" },
]

[dependencies]
terminal_size = "0.4.3"
crossterm = "0.27"
rand = "0.9.2"

[dependencies.uuid]
version = "1.18.1"
features = ["v4"]

[profile.release]
opt-level = 3
lto = true
panic = "abort"
strip = true
codegen-units = 1

[lib]
name = "coretilus"
path = "src/coretilus.rs"

[[bin]]
name = "gti"

[[bin]]
name = "sl"
